Fix MinGW and OS/2 bustage from bug 262218 patch suggested by mkaply r=me sr=darin